[gd_scene load_steps=6 format=4 uid="uid://dvm6kk8vxog5w"]

[ext_resource type="Texture2D" uid="uid://8j36sa4okw1j" path="res://Assets/Sprites/Tiles/map1.png" id="1_tipan"]
[ext_resource type="Script" path="res://Scripts/intro_ui.gd" id="1_uyahb"]
[ext_resource type="AudioStream" uid="uid://lpu8kdgb4v7s" path="res://Assets/Musics/MMD.mp3" id="3_3utb8"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_wdgxp"]
texture = ExtResource("1_tipan")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
20:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
20:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
20:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
17:11/0 = 0
18:11/0 = 0
19:11/0 = 0
20:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
16:12/0 = 0
17:12/0 = 0
18:12/0 = 0
19:12/0 = 0
20:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
16:13/0 = 0
17:13/0 = 0
18:13/0 = 0
19:13/0 = 0
20:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0
16:14/0 = 0
17:14/0 = 0
18:14/0 = 0
19:14/0 = 0
20:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0
16:15/0 = 0
17:15/0 = 0
18:15/0 = 0
19:15/0 = 0
20:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
10:16/0 = 0
11:16/0 = 0
12:16/0 = 0
13:16/0 = 0
14:16/0 = 0
15:16/0 = 0
16:16/0 = 0
17:16/0 = 0
18:16/0 = 0
19:16/0 = 0
20:16/0 = 0
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
7:17/0 = 0
8:17/0 = 0
9:17/0 = 0
10:17/0 = 0
11:17/0 = 0
12:17/0 = 0
13:17/0 = 0
14:17/0 = 0
15:17/0 = 0
16:17/0 = 0
17:17/0 = 0
18:17/0 = 0
19:17/0 = 0
20:17/0 = 0
0:18/0 = 0
1:18/0 = 0
2:18/0 = 0
3:18/0 = 0
4:18/0 = 0
5:18/0 = 0
6:18/0 = 0
7:18/0 = 0
8:18/0 = 0
9:18/0 = 0
10:18/0 = 0
11:18/0 = 0
12:18/0 = 0
13:18/0 = 0
14:18/0 = 0
15:18/0 = 0
16:18/0 = 0
17:18/0 = 0
18:18/0 = 0
19:18/0 = 0
20:18/0 = 0
0:19/0 = 0
1:19/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
5:19/0 = 0
6:19/0 = 0
7:19/0 = 0
8:19/0 = 0
9:19/0 = 0
10:19/0 = 0
11:19/0 = 0
12:19/0 = 0
13:19/0 = 0
14:19/0 = 0
15:19/0 = 0
16:19/0 = 0
17:19/0 = 0
18:19/0 = 0
19:19/0 = 0
20:19/0 = 0
0:20/0 = 0
1:20/0 = 0
2:20/0 = 0
3:20/0 = 0
4:20/0 = 0
5:20/0 = 0
6:20/0 = 0
7:20/0 = 0
8:20/0 = 0
9:20/0 = 0
10:20/0 = 0
11:20/0 = 0
12:20/0 = 0
13:20/0 = 0
14:20/0 = 0
15:20/0 = 0
16:20/0 = 0
17:20/0 = 0
18:20/0 = 0
19:20/0 = 0
20:20/0 = 0
0:21/0 = 0
1:21/0 = 0
2:21/0 = 0
3:21/0 = 0
4:21/0 = 0
5:21/0 = 0
6:21/0 = 0
7:21/0 = 0
8:21/0 = 0
9:21/0 = 0
10:21/0 = 0
11:21/0 = 0
12:21/0 = 0
13:21/0 = 0
14:21/0 = 0
15:21/0 = 0
16:21/0 = 0
17:21/0 = 0
18:21/0 = 0
19:21/0 = 0
20:21/0 = 0
0:22/0 = 0
1:22/0 = 0
2:22/0 = 0
3:22/0 = 0
4:22/0 = 0
5:22/0 = 0
6:22/0 = 0
7:22/0 = 0
8:22/0 = 0
9:22/0 = 0
10:22/0 = 0
11:22/0 = 0
12:22/0 = 0
13:22/0 = 0
14:22/0 = 0
15:22/0 = 0
16:22/0 = 0
17:22/0 = 0
18:22/0 = 0
19:22/0 = 0
20:22/0 = 0
0:23/0 = 0
1:23/0 = 0
2:23/0 = 0
3:23/0 = 0
4:23/0 = 0
5:23/0 = 0
6:23/0 = 0
7:23/0 = 0
8:23/0 = 0
9:23/0 = 0
10:23/0 = 0
11:23/0 = 0
12:23/0 = 0
13:23/0 = 0
14:23/0 = 0
15:23/0 = 0
16:23/0 = 0
17:23/0 = 0
18:23/0 = 0
19:23/0 = 0
20:23/0 = 0
0:24/0 = 0
1:24/0 = 0
2:24/0 = 0
3:24/0 = 0
4:24/0 = 0
5:24/0 = 0
6:24/0 = 0
7:24/0 = 0
8:24/0 = 0
9:24/0 = 0
10:24/0 = 0
11:24/0 = 0
12:24/0 = 0
13:24/0 = 0
14:24/0 = 0
15:24/0 = 0
16:24/0 = 0
17:24/0 = 0
18:24/0 = 0
19:24/0 = 0
20:24/0 = 0
0:25/0 = 0
1:25/0 = 0
2:25/0 = 0
3:25/0 = 0
4:25/0 = 0
5:25/0 = 0
6:25/0 = 0
7:25/0 = 0
8:25/0 = 0
9:25/0 = 0
10:25/0 = 0
11:25/0 = 0
12:25/0 = 0
13:25/0 = 0
14:25/0 = 0
15:25/0 = 0
16:25/0 = 0
17:25/0 = 0
18:25/0 = 0
19:25/0 = 0
20:25/0 = 0
0:26/0 = 0
1:26/0 = 0
2:26/0 = 0
3:26/0 = 0
4:26/0 = 0
5:26/0 = 0
6:26/0 = 0
7:26/0 = 0
8:26/0 = 0
9:26/0 = 0
10:26/0 = 0
11:26/0 = 0
12:26/0 = 0
13:26/0 = 0
14:26/0 = 0
15:26/0 = 0
16:26/0 = 0
17:26/0 = 0
18:26/0 = 0
19:26/0 = 0
20:26/0 = 0
0:27/0 = 0
1:27/0 = 0
2:27/0 = 0
3:27/0 = 0
4:27/0 = 0
5:27/0 = 0
6:27/0 = 0
7:27/0 = 0
8:27/0 = 0
9:27/0 = 0
10:27/0 = 0
11:27/0 = 0
12:27/0 = 0
13:27/0 = 0
14:27/0 = 0
15:27/0 = 0
16:27/0 = 0
17:27/0 = 0
18:27/0 = 0
19:27/0 = 0
20:27/0 = 0
0:28/0 = 0
1:28/0 = 0
2:28/0 = 0
3:28/0 = 0
4:28/0 = 0
5:28/0 = 0
6:28/0 = 0
7:28/0 = 0
8:28/0 = 0
9:28/0 = 0
10:28/0 = 0
11:28/0 = 0
12:28/0 = 0
13:28/0 = 0
14:28/0 = 0
15:28/0 = 0
16:28/0 = 0
17:28/0 = 0
18:28/0 = 0
19:28/0 = 0
20:28/0 = 0
0:29/0 = 0
1:29/0 = 0
2:29/0 = 0
3:29/0 = 0
4:29/0 = 0
5:29/0 = 0
6:29/0 = 0
7:29/0 = 0
8:29/0 = 0
9:29/0 = 0
10:29/0 = 0
11:29/0 = 0
12:29/0 = 0
13:29/0 = 0
14:29/0 = 0
15:29/0 = 0
16:29/0 = 0
17:29/0 = 0
18:29/0 = 0
19:29/0 = 0
20:29/0 = 0
0:30/0 = 0
1:30/0 = 0
2:30/0 = 0
3:30/0 = 0
4:30/0 = 0
5:30/0 = 0
6:30/0 = 0
7:30/0 = 0
8:30/0 = 0
9:30/0 = 0
10:30/0 = 0
11:30/0 = 0
12:30/0 = 0
13:30/0 = 0
14:30/0 = 0
15:30/0 = 0
16:30/0 = 0
17:30/0 = 0
18:30/0 = 0
19:30/0 = 0
20:30/0 = 0
0:31/0 = 0
1:31/0 = 0
2:31/0 = 0
3:31/0 = 0
4:31/0 = 0
5:31/0 = 0
6:31/0 = 0
7:31/0 = 0
8:31/0 = 0
9:31/0 = 0
10:31/0 = 0
11:31/0 = 0
12:31/0 = 0
13:31/0 = 0
14:31/0 = 0
15:31/0 = 0
16:31/0 = 0
17:31/0 = 0
18:31/0 = 0
19:31/0 = 0
20:31/0 = 0
0:32/0 = 0
1:32/0 = 0
2:32/0 = 0
3:32/0 = 0
4:32/0 = 0
5:32/0 = 0
6:32/0 = 0
7:32/0 = 0
8:32/0 = 0
9:32/0 = 0
10:32/0 = 0
11:32/0 = 0
12:32/0 = 0
13:32/0 = 0
14:32/0 = 0
15:32/0 = 0
16:32/0 = 0
17:32/0 = 0
18:32/0 = 0
19:32/0 = 0
20:32/0 = 0
0:33/0 = 0
1:33/0 = 0
2:33/0 = 0
3:33/0 = 0
4:33/0 = 0
5:33/0 = 0
6:33/0 = 0
7:33/0 = 0
8:33/0 = 0
9:33/0 = 0
10:33/0 = 0
11:33/0 = 0
12:33/0 = 0
13:33/0 = 0
14:33/0 = 0
15:33/0 = 0
16:33/0 = 0
17:33/0 = 0
18:33/0 = 0
19:33/0 = 0
20:33/0 = 0
0:34/0 = 0
1:34/0 = 0
2:34/0 = 0
3:34/0 = 0
4:34/0 = 0
5:34/0 = 0
6:34/0 = 0
7:34/0 = 0
8:34/0 = 0
9:34/0 = 0
10:34/0 = 0
11:34/0 = 0
12:34/0 = 0
13:34/0 = 0
14:34/0 = 0
15:34/0 = 0
16:34/0 = 0
17:34/0 = 0
18:34/0 = 0
19:34/0 = 0
20:34/0 = 0
0:35/0 = 0
1:35/0 = 0
2:35/0 = 0
3:35/0 = 0
4:35/0 = 0
5:35/0 = 0
6:35/0 = 0
7:35/0 = 0
8:35/0 = 0
9:35/0 = 0
10:35/0 = 0
11:35/0 = 0
12:35/0 = 0
13:35/0 = 0
14:35/0 = 0
15:35/0 = 0
16:35/0 = 0
17:35/0 = 0
18:35/0 = 0
19:35/0 = 0
20:35/0 = 0
0:36/0 = 0
1:36/0 = 0
2:36/0 = 0
3:36/0 = 0
4:36/0 = 0
5:36/0 = 0
6:36/0 = 0
7:36/0 = 0
8:36/0 = 0
9:36/0 = 0
10:36/0 = 0
11:36/0 = 0
12:36/0 = 0
13:36/0 = 0
14:36/0 = 0
15:36/0 = 0
16:36/0 = 0
17:36/0 = 0
18:36/0 = 0
19:36/0 = 0
20:36/0 = 0
0:37/0 = 0
1:37/0 = 0
2:37/0 = 0
3:37/0 = 0
4:37/0 = 0
5:37/0 = 0
6:37/0 = 0
7:37/0 = 0
8:37/0 = 0
9:37/0 = 0
10:37/0 = 0
11:37/0 = 0
12:37/0 = 0
13:37/0 = 0
14:37/0 = 0
15:37/0 = 0
16:37/0 = 0
17:37/0 = 0
18:37/0 = 0
19:37/0 = 0
20:37/0 = 0
0:38/0 = 0
1:38/0 = 0
2:38/0 = 0
3:38/0 = 0
4:38/0 = 0
5:38/0 = 0
6:38/0 = 0
7:38/0 = 0
8:38/0 = 0
9:38/0 = 0
10:38/0 = 0
11:38/0 = 0
12:38/0 = 0
13:38/0 = 0
14:38/0 = 0
15:38/0 = 0
16:38/0 = 0
17:38/0 = 0
18:38/0 = 0
19:38/0 = 0
20:38/0 = 0
0:39/0 = 0
1:39/0 = 0
2:39/0 = 0
3:39/0 = 0
4:39/0 = 0
5:39/0 = 0
6:39/0 = 0
7:39/0 = 0
8:39/0 = 0
9:39/0 = 0
10:39/0 = 0
11:39/0 = 0
12:39/0 = 0
13:39/0 = 0
14:39/0 = 0
15:39/0 = 0
16:39/0 = 0
17:39/0 = 0
18:39/0 = 0
19:39/0 = 0
20:39/0 = 0
0:40/0 = 0
1:40/0 = 0
2:40/0 = 0
3:40/0 = 0
4:40/0 = 0
5:40/0 = 0
6:40/0 = 0
7:40/0 = 0
8:40/0 = 0
9:40/0 = 0
10:40/0 = 0
11:40/0 = 0
12:40/0 = 0
13:40/0 = 0
14:40/0 = 0
15:40/0 = 0
16:40/0 = 0
17:40/0 = 0
18:40/0 = 0
19:40/0 = 0
20:40/0 = 0
0:41/0 = 0
1:41/0 = 0
2:41/0 = 0
3:41/0 = 0
4:41/0 = 0
5:41/0 = 0
6:41/0 = 0
7:41/0 = 0
8:41/0 = 0
9:41/0 = 0
10:41/0 = 0
11:41/0 = 0
12:41/0 = 0
13:41/0 = 0
14:41/0 = 0
15:41/0 = 0
16:41/0 = 0
17:41/0 = 0
18:41/0 = 0
19:41/0 = 0
20:41/0 = 0

[sub_resource type="TileSet" id="TileSet_4vd6e"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_wdgxp")

[node name="introUI" type="Node2D"]
script = ExtResource("1_uyahb")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAAACAA4AAAABAAAAAAADAAQAAAACAAAAAAADAAQAAAADAAAAAAADAAQAAAAEAAAAAAADAAQAAAAFAAAAAAADAAQAAAAGAAAAAAADAAQAAAAHAAAAAAADAAQAAAAIAAAAAAADAAQAAAAJAAAAAAADAAQAAAAKAAAAAAADAAQAAAALAAAAAAADAAQAAAAMAAAAAAADAAQAAAANAAAAAAADAAQAAAAOAAAAAAADAAQAAAAPAAAAAAADAAQAAAAQAAAAAAADAAQAAAARAAAAAAADAAQAAAASAAAAAAADAAQAAAATAAAAAAADAAQAAAAUAAAAAAAEAAQAAAAVAAAAAAAEAAQAAAAVAAEAAAADABIAAAAVAAIAAAADABIAAAAVAAMAAAADABIAAAAVAAQAAAADABIAAAAVAAUAAAADABIAAAAVAAYAAAADABIAAAAVAAcAAAADABIAAAAVAAgAAAADABIAAAAVAAkAAAADABIAAAAVAAoAAAADABIAAAAVAAsAAAADABIAAAAVAAwAAAADABIAAAAVAA0AAAADABIAAAAWAAAAAAAEAAQAAAAXAAAAAAAEAAQAAAAYAAAAAAAEAAQAAAAZAAAAAAAEAAQAAAAaAAAAAAAEAAQAAAAbAAAAAAAEAAQAAAAcAAAAAAAEAAQAAAAdAAAAAAAIAAYAAAAdAAEAAAAJAA4AAAAdAAIAAAAJAA4AAAAdAAMAAAAJAA4AAAAdAAQAAAAJAA4AAAAdAAUAAAAJAA4AAAAdAAYAAAAJAA4AAAAdAAcAAAAJAA0AAAAdAAgAAAAJAA0AAAAdAAkAAAAJAA0AAAAdAAoAAAAJAA0AAAAdAAsAAAAJAA0AAAAdAAwAAAAJAA4AAAAdAA0AAAAJAA0AAAAdAA4AAAAJAA0AAAAdAA8AAAAJAA0AAAAdABAAAAAJAA0AAAAdABEAAAAJAA0AAAAdABIAAAAJAA0AAAAdABMAAAAGABMAAAAcABMAAAAFABMAAAAbABMAAAAFABMAAAAaABMAAAAFABMAAAAZABMAAAAFABMAAAAYABMAAAAFABMAAAAXABMAAAAFABMAAAAWABMAAAAFABMAAAAVABMAAAAFABMAAAAUABMAAAAFABMAAAATABMAAAAFABMAAAASABMAAAAFABMAAAARABMAAAAFABMAAAAQABMAAAAFABMAAAAPABMAAAAFABMAAAAOABMAAAAFABMAAAANABMAAAAFABMAAAAMABMAAAAFABMAAAALABMAAAAFABMAAAAKABMAAAAFABMAAAAJABMAAAAFABMAAAAIABMAAAAFABMAAAAHABMAAAAFABMAAAAGABMAAAAFABMAAAAFABMAAAAFABMAAAAEABMAAAAFABMAAAADABMAAAAFABMAAAACABMAAAAFABMAAAABABMAAAAFABMAAAAAABMAAAABABIAAAAAABIAAAADAA0AAAAAABEAAAADAA0AAAAAABAAAAADAA0AAAAAAA8AAAADAA0AAAAAAA4AAAADAA0AAAAAAA0AAAADAA0AAAAAAAwAAAADAA0AAAAAAAsAAAADAA0AAAAAAAoAAAADAA0AAAAAAAkAAAADAA0AAAAAAAgAAAADAA0AAAAAAAcAAAADAA0AAAAAAAYAAAADAA0AAAAAAAUAAAADAA0AAAAAAAQAAAADAA0AAAAAAAMAAAADAA0AAAAAAAIAAAADAA0AAAAAAAEAAAADAA0AAAABAAEAAAADABIAAAABAAIAAAADABIAAAABAAMAAAADABIAAAABAAQAAAADABIAAAACAAQAAAACABEAAAACAAUAAAADABIAAAADAAUAAAADABIAAAAEAAUAAAACABEAAAAFAAUAAAADABEAAAAGAAUAAAAEABEAAAAHAAUAAAAFABEAAAAHAAYAAAADABIAAAAIAAYAAAADABIAAAAJAAYAAAADABIAAAAJAAcAAAADABIAAAAIAAgAAAADABIAAAAIAAkAAAADABIAAAAHAAkAAAADABIAAAAFABAAAAAEAA8AAAAFAA8AAAAEAA8AAAAFAA4AAAAEAA8AAAAFAA0AAAAFAA4AAAAFAAwAAAADABIAAAAFAAsAAAADABIAAAAFAAoAAAADABIAAAAFAAkAAAADABIAAAAFAAgAAAADABIAAAAFAAcAAAADABIAAAAFAAYAAAADABIAAAAEAAYAAAADABIAAAADAAYAAAADABIAAAACAAYAAAADABIAAAABAAYAAAADABIAAAABAAUAAAADABIAAAABAAcAAAADABIAAAABAAgAAAADABIAAAABAAkAAAADABIAAAABAAoAAAADABIAAAABAAsAAAADABIAAAABAAwAAAADABIAAAABAA0AAAADABIAAAABAA4AAAADABIAAAABAA8AAAACABAAAAABABAAAAACABEAAAABABEAAAACABAAAAABABIAAAACABEAAAACABIAAAADABEAAAACABEAAAADABAAAAACABAAAAADABAAAAACAA8AAAADABAAAAACAA4AAAADAA8AAAACAA0AAAADABIAAAACAAwAAAADABIAAAACAAsAAAADABIAAAACAAoAAAADABIAAAACAAkAAAADABIAAAACAAgAAAADABIAAAACAAcAAAADABIAAAADAAcAAAADABIAAAADAAgAAAADABIAAAADAAkAAAADABIAAAADAAoAAAADABIAAAADAAsAAAADABIAAAADAAwAAAADABIAAAADAA0AAAAEAA4AAAADAA4AAAAEAA8AAAADAA8AAAAEAA8AAAADABAAAAADABAAAAADABEAAAAEABAAAAADABIAAAAEABEAAAAEABIAAAAEAA8AAAAEABEAAAAEAA8AAAAEABAAAAAEAA8AAAAEAA8AAAAEAA8AAAAEAA4AAAAEAA8AAAAEAA0AAAAEAA8AAAAEAAwAAAADABIAAAAEAAsAAAADABIAAAAEAAoAAAADABIAAAAEAAkAAAADABIAAAAEAAgAAAADABIAAAAEAAcAAAADABIAAAAFABEAAAADABAAAAAFABIAAAADABEAAAAGABIAAAAEABEAAAAGABEAAAAEABAAAAAGABAAAAAEAA8AAAAGAA8AAAAEAA8AAAAGAA4AAAADABIAAAAGAA0AAAADABIAAAAGAAwAAAADABIAAAAGAAsAAAADABIAAAAGAAoAAAADABIAAAAGAAkAAAADABIAAAAGAAgAAAADABIAAAAGAAcAAAADABIAAAAGAAYAAAADABIAAAAHAAcAAAADABIAAAAHAAgAAAADABIAAAAIAAcAAAADABIAAAAHAAoAAAADABIAAAAHAAsAAAADABIAAAAHAAwAAAADABIAAAAHAA0AAAADABIAAAAHAA4AAAADABIAAAAHAA8AAAAFAA4AAAAHABAAAAAFAA8AAAAHABEAAAAFABAAAAAHABIAAAAFABEAAAAIABIAAAADABIAAAAIABEAAAADABIAAAAIABAAAAADABIAAAAIAA8AAAADABIAAAAIAA4AAAADABIAAAAIAA0AAAADABIAAAAIAAwAAAADABIAAAAIAAsAAAADABIAAAAIAAoAAAADABIAAAAJAAoAAAADABIAAAAJAAkAAAADABIAAAAJAAgAAAADABIAAAAKAAgAAAADABIAAAAKAAcAAAADABIAAAAKAAYAAAADABIAAAAKAAUAAAADABIAAAAKAAQAAAADABIAAAAKAAMAAAADABIAAAAKAAIAAAADABIAAAAKAAEAAAADABIAAAAJAAEAAAADABIAAAAIAAEAAAADABIAAAAHAAEAAAADABIAAAAGAAEAAAADABIAAAAFAAEAAAAFAA4AAAAEAAEAAAAEAA4AAAADAAEAAAADABIAAAACAAEAAAADABIAAAACAAIAAAACAA8AAAACAAMAAAACABAAAAADAAMAAAADABAAAAADAAIAAAADAA8AAAAEAAIAAAAEAA8AAAAEAAMAAAAEAA8AAAAEAAQAAAAEAA8AAAADAAQAAAADABEAAAAFAAQAAAADABAAAAAFAAMAAAAEAA8AAAAFAAIAAAAEAA8AAAAGAAIAAAAEAA8AAAAGAAMAAAAEAA8AAAAGAAQAAAAEABAAAAAHAAQAAAAFABAAAAAHAAMAAAAFAA8AAAAHAAIAAAAFAA4AAAAIAAIAAAADABIAAAAIAAMAAAADABIAAAAIAAQAAAADABIAAAAIAAUAAAADABIAAAAJAAUAAAADABIAAAAJAAQAAAADABIAAAAJAAMAAAADABIAAAAJAAIAAAADABIAAAALAAEAAAADABIAAAALAAIAAAADABIAAAALAAMAAAADABIAAAALAAQAAAADABIAAAALAAUAAAADABIAAAALAAYAAAADABIAAAALAAcAAAADABIAAAALAAgAAAADABIAAAALAAkAAAADABIAAAAKAAkAAAADABIAAAAKAAoAAAADABIAAAAKAAsAAAADABIAAAAJAAsAAAADABIAAAAJAAwAAAADABIAAAAJAA0AAAADABIAAAAJAA4AAAADABIAAAAJAA8AAAADABIAAAAJABAAAAADABIAAAAJABEAAAADABIAAAAJABIAAAADABIAAAAKABIAAAADABIAAAAKABEAAAADABIAAAAKABAAAAADABIAAAAKAA8AAAADABIAAAAKAA4AAAADABIAAAAKAA0AAAADABIAAAAKAAwAAAADABIAAAALAAwAAAADABIAAAALAAsAAAADABIAAAALAAoAAAADABIAAAAMAAoAAAADABIAAAAMAAkAAAADABIAAAAMAAgAAAADABIAAAAMAAcAAAADABIAAAAMAAYAAAADABIAAAAMAAUAAAADABIAAAAMAAQAAAADABIAAAAMAAMAAAADABIAAAAMAAIAAAADABIAAAAMAAEAAAADABIAAAANAAEAAAADABIAAAANAAIAAAADABIAAAANAAMAAAADABIAAAANAAQAAAADABIAAAANAAUAAAADABIAAAANAAYAAAADABIAAAANAAcAAAADABIAAAANAAgAAAADABIAAAANAAkAAAADABIAAAANAAoAAAADABIAAAANAAsAAAADABIAAAAMAAsAAAADABIAAAAMAAwAAAADABIAAAAMAA0AAAADABIAAAALAA0AAAADABIAAAALAA4AAAADABIAAAALAA8AAAADABIAAAALABAAAAADABIAAAALABEAAAADABIAAAALABIAAAADABIAAAAMABIAAAADABIAAAAMABEAAAADABIAAAAMABAAAAADABIAAAAMAA8AAAADABIAAAAMAA4AAAADABIAAAANAA4AAAADABIAAAANAA0AAAADABIAAAANAAwAAAADABIAAAAOAAwAAAADABIAAAAOAAsAAAADABIAAAAOAAoAAAADABIAAAAOAAkAAAADABIAAAAOAAgAAAADABIAAAAOAAcAAAADABIAAAAOAAYAAAADABIAAAAOAAUAAAADABIAAAAOAAQAAAADABIAAAAOAAMAAAADABIAAAAOAAIAAAADABIAAAAOAAEAAAADABIAAAAPAAEAAAADABIAAAAPAAIAAAADABIAAAAPAAMAAAADABIAAAAPAAQAAAADABIAAAAPAAUAAAADABIAAAAPAAYAAAADABIAAAAPAAcAAAADABIAAAAPAAgAAAADABIAAAAPAAkAAAADABIAAAAPAAoAAAADABIAAAAPAAsAAAADABIAAAAPAAwAAAADABIAAAAPAA0AAAADABIAAAAOAA0AAAADABIAAAAOAA4AAAADABIAAAAOAA8AAAADABIAAAANAA8AAAADABIAAAANABAAAAADABIAAAANABEAAAADABIAAAANABIAAAADABIAAAAOABIAAAADABIAAAAOABEAAAADABIAAAAOABAAAAADABIAAAAPABAAAAADABIAAAAPAA8AAAADABIAAAAPAA4AAAADABIAAAAQAA4AAAADABIAAAAQAA0AAAADABIAAAAQAAwAAAADABIAAAAQAAsAAAADABIAAAAQAAoAAAADABIAAAAQAAkAAAADABIAAAAQAAgAAAADABIAAAAQAAcAAAADABIAAAAQAAYAAAADABIAAAAQAAUAAAADABIAAAAQAAQAAAADABIAAAAQAAMAAAADABIAAAAQAAIAAAADABIAAAAQAAEAAAADABIAAAARAAEAAAADABIAAAARAAIAAAADABIAAAARAAMAAAADABIAAAARAAQAAAADABIAAAARAAUAAAADABIAAAARAAYAAAADABIAAAARAAcAAAADABIAAAARAAgAAAADABIAAAARAAkAAAADABIAAAARAAoAAAADABIAAAARAAsAAAADABIAAAARAAwAAAADABIAAAARAA0AAAADABIAAAARAA4AAAADABIAAAARAA8AAAADABIAAAAQAA8AAAADABIAAAAQABAAAAADABIAAAAQABEAAAADABIAAAAPABEAAAADABIAAAAPABIAAAADABIAAAAQABIAAAADABIAAAARABIAAAADABIAAAARABEAAAADABIAAAARABAAAAADABIAAAASABAAAAADABIAAAASAA8AAAADABIAAAASAA4AAAADABIAAAASAA0AAAADABIAAAASAAwAAAADABIAAAASAAsAAAADABIAAAASAAoAAAADABIAAAASAAkAAAADABIAAAASAAgAAAADABIAAAASAAcAAAADABIAAAASAAYAAAADABIAAAASAAUAAAADABIAAAASAAQAAAADABIAAAASAAMAAAADABIAAAASAAIAAAADABIAAAASAAEAAAADABIAAAATAAEAAAADABIAAAATAAIAAAADABIAAAATAAMAAAADABIAAAATAAQAAAADABIAAAATAAUAAAADABIAAAATAAYAAAADABIAAAATAAcAAAADABIAAAATAAgAAAADABIAAAATAAkAAAADABIAAAATAAoAAAADABIAAAATAAsAAAADABIAAAATAAwAAAADABIAAAATAA0AAAADABIAAAATAA4AAAADABIAAAATAA8AAAADABIAAAATABAAAAADABIAAAATABEAAAADABIAAAASABEAAAADABIAAAASABIAAAADABIAAAATABIAAAADABIAAAAUABIAAAADABIAAAAUABEAAAADABIAAAAUABAAAAADABIAAAAUAA8AAAADABIAAAAUAA4AAAADABIAAAAUAA0AAAADABIAAAAUAAwAAAADABIAAAAUAAsAAAADABIAAAAUAAoAAAADABIAAAAUAAkAAAADABIAAAAUAAgAAAADABIAAAAUAAcAAAADABIAAAAUAAYAAAADABIAAAAUAAUAAAADABIAAAAUAAQAAAADABIAAAAUAAMAAAADABIAAAAUAAIAAAADABIAAAAUAAEAAAADABIAAAAVAA4AAAADABIAAAAVAA8AAAADABIAAAAVABAAAAADABIAAAAVABEAAAADABIAAAAVABIAAAADABIAAAAWABIAAAADABIAAAAWABEAAAADABIAAAAWABAAAAADABIAAAAWAA8AAAADABIAAAAWAA4AAAADABIAAAAWAA0AAAADABIAAAAWAAwAAAADABIAAAAWAAsAAAADABIAAAAWAAoAAAADABIAAAAWAAkAAAADABIAAAAWAAgAAAADABIAAAAWAAcAAAADABIAAAAWAAYAAAADABIAAAAWAAUAAAADABIAAAAWAAQAAAADABIAAAAWAAMAAAADABIAAAAWAAIAAAADABIAAAAWAAEAAAADABIAAAAXAAEAAAADABIAAAAXAAIAAAADABIAAAAXAAMAAAADABIAAAAXAAQAAAADABIAAAAXAAUAAAADABIAAAAXAAYAAAADABIAAAAXAAcAAAADABIAAAAXAAgAAAADABIAAAAXAAkAAAADABIAAAAXAAoAAAADABIAAAAXAAsAAAADABIAAAAXAAwAAAADABIAAAAXAA0AAAADABIAAAAXAA4AAAADABIAAAAXAA8AAAADABIAAAAXABAAAAADABIAAAAXABEAAAADABIAAAAXABIAAAADABIAAAAYABIAAAADABIAAAAYABEAAAADABIAAAAYABAAAAADABIAAAAYAA8AAAADABIAAAAYAA4AAAADABIAAAAYAA0AAAACABEAAAAYAAwAAAACABAAAAAYAAsAAAACAA8AAAAYAAoAAAACABEAAAAYAAkAAAACABAAAAAYAAgAAAACAA8AAAAYAAcAAAADABIAAAAYAAYAAAADABIAAAAYAAUAAAADABIAAAAYAAQAAAADABIAAAAYAAMAAAADABIAAAAYAAIAAAADABIAAAAYAAEAAAADABIAAAAZAAEAAAADABIAAAAZAAIAAAADABIAAAAZAAMAAAADABIAAAAZAAQAAAADABIAAAAZAAUAAAADABIAAAAZAAYAAAADABIAAAAZAAcAAAADABIAAAAZAAgAAAADAA8AAAAZAAkAAAADABAAAAAZAAoAAAADABEAAAAZAAsAAAADAA8AAAAZAAwAAAADABAAAAAZAA0AAAADABEAAAAZAA4AAAADABIAAAAZAA8AAAADABIAAAAZABAAAAADABIAAAAZABEAAAADABIAAAAZABIAAAADABIAAAAaABIAAAADABIAAAAaABEAAAADABIAAAAaABAAAAADABIAAAAaAA8AAAADABIAAAAaAA4AAAADABIAAAAaAA0AAAAEABEAAAAaAAwAAAAEABAAAAAaAAsAAAAEAA8AAAAaAAoAAAAEABEAAAAaAAkAAAAEABAAAAAaAAgAAAAEAA8AAAAaAAcAAAAEAA4AAAAaAAYAAAADABIAAAAaAAUAAAADABIAAAAaAAQAAAADABIAAAAaAAMAAAADABIAAAAaAAIAAAADABIAAAAaAAEAAAADABIAAAAbAAEAAAADABIAAAAbAAIAAAADABIAAAAbAAMAAAADABIAAAAbAAQAAAADABIAAAAbAAUAAAADABIAAAAbAAYAAAADABIAAAAbAAcAAAAFAA4AAAAbAAgAAAAEAA8AAAAbAAkAAAAEAA8AAAAbAAoAAAAFABEAAAAbAAsAAAAFAA8AAAAbAAwAAAAEAA8AAAAbAA0AAAAFABEAAAAbAA4AAAADABIAAAAbAA8AAAADABIAAAAbABAAAAADABIAAAAbABEAAAADABIAAAAbABIAAAADABIAAAAcABIAAAADABIAAAAcABEAAAADABIAAAAcABAAAAADABIAAAAcAA8AAAADABIAAAAcAA4AAAADABIAAAAcAA0AAAADABIAAAAcAAwAAAAFABEAAAAcAAsAAAADABIAAAAcAAoAAAADABIAAAAcAAkAAAAFABEAAAAcAAgAAAAFABEAAAAcAAcAAAADABIAAAAcAAYAAAADABIAAAAcAAUAAAADABIAAAAcAAQAAAADABIAAAAcAAMAAAADABIAAAAcAAIAAAADABIAAAAcAAEAAAADABIAAAA=")
tile_set = SubResource("TileSet_4vd6e")

[node name="start" type="Button" parent="."]
offset_left = 368.0
offset_top = 48.0
offset_right = 608.0
offset_bottom = 152.0
text = "START"

[node name="menu" type="Button" parent="."]
offset_left = 368.0
offset_top = 184.0
offset_right = 608.0
offset_bottom = 288.0
text = "MENU"

[node name="settings" type="Button" parent="."]
offset_left = 368.0
offset_top = 328.0
offset_right = 608.0
offset_bottom = 432.0
text = "SETTINGS"

[node name="quit" type="Button" parent="."]
offset_left = 368.0
offset_top = 472.0
offset_right = 608.0
offset_bottom = 576.0
text = "QUIT"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(478, 319)
scale = Vector2(2.04, 1.76)
zoom = Vector2(1.2, 1)

[node name="start_music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_3utb8")
autoplay = true

[connection signal="pressed" from="start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="quit" to="." method="_on_quit_pressed"]
